# morta_nuts2

./: .gitignore  README.md  articles_20260320_1625.csv  config_doc_api.py  main.py  pyproject.toml  readthedocs.yaml  veille_2026-03.xlsx
NUTS_files/: NUTS_RG_01M_2024_3035.dbf  NUTS_RG_60M_2024_4326.dbf  NUTS_RG_60M_2024_4326.shx
data/: BE_Dxt_raw.csv  BE_Dxt_raw_BE.csv  BE_Lxt_rawBE.csv
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst
notebook/: BE_variation_lamda.xlsx  BE_variation_noeuds.xlsx  dic_llp.json  exploration.ipynb  exploration_BE.ipynb  exploration_deterministe BE.ipynb  exploration_deterministe copy.ipynb  exploration_deterministe.ipynb  exploration_stochas.ipynb  variation_noeud_LC.xlsx  ~$BE_variation_noeud_LC.xlsx
notebook/Exploration_BE/: exploration_deterministe_BE.ipynb  exploration_stochastique_BE.ipynb
notebook/Exploration_FR/: exploration_deterministe_FR.ipynb  exploration_stochastique_FR.ipynb
notebook/Processing/: BE_variation_lamda_LC.xlsx  BE_variation_noeud_LC.xlsx  FR_variation_noeuds.xlsx  processing.ipynb  variation_lamda_LC.xlsx  variation_lamda_llp.xlsx
output_note/BE/: LifeExpectancy_at_birth_ll.csv  LifeExpectancy_at_birth_ll_parametric.csv  LifeExpectancy_at_birth_llp_parametric.csv  LifeExpectancy_increase_llp.csv  LifeExpectancy_increase_llp_to_percent.csv  annuity_table.csv  df_stats_knots_llp_BE.csv  df_stats_lam_llp_BE.csv  models.csv  wmae.csv
output_note/FR/: LifeExpectancy_at_birth_ll.csv  LifeExpectancy_at_birth_ll_parametric.csv  annuity_table.csv  (+7 more)
visualisation/: MortalityPlotter.py
(+37 files in other folders)
