[project]
name = "morta-nuts2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "eurostatapiclient>=0.3.0",
    "geopandas>=1.1.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scipy>=1.17.0",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
 
[tool.setuptools.packages.find]
where = ["src"]
